# git-inner

./: .gitignore  Cargo.toml  README-zh.md  README.md  build.rs  identifier.sqlite
docs/: capabilities.md  pack.md  transfer.md
proto/: commit.proto  refs.proto  repository.proto  share.proto  ssh.proto  tree.proto
src/: capability.rs  error.rs  lib.rs  pkt_line.rs  sha.rs  time.rs
src/app/: mod.rs  mongo.rs  sqlx.rs
src/auth/: mod.rs
src/callback/: mod.rs  sidebend.rs
src/capability/: enums.rs  mod.rs
src/config/: mod.rs  rpc.rs  ssh.rs  tls.rs
src/control/: mod.rs
src/http/: mod.rs  receive.rs  refs.rs  upload.rs
src/logs/: mod.rs
src/model/: commit.rs  mod.rs  repository.rs  sshkey.rs  tag.rs  tree.rs
src/objects/: blob.rs  commit.rs  mod.rs  ofs_delta.rs  ref_delta.rs  signature.rs  tag.rs  tree.rs  types.rs
src/odb/: localstore.rs  mod.rs
src/odb/mongo/: mod.rs  odb.rs  transaction.rs
src/refs/: localstore.rs  mod.rs  mongo.rs
src/repository/: info.rs  init.rs  mod.rs  refs.rs  set.rs
src/rpc/: gitfs.rs  mod.rs  server.rs
src/rpc/service/: commit.rs  mod.rs  refs.rs  repository.rs  tree.rs
src/serve/: mod.rs  mongo.rs
src/sha/: mod.rs  sha1.rs  sha256.rs
src/ssh/: service.rs
src/ssh/handler/: mod.rs
src/stream/: mod.rs
src/transaction/: mod.rs  receive_pack.rs  refs.rs  service.rs  version.rs
src/transaction/advertise/: advertise_refs.rs  http.rs  mod.rs  refs.rs
src/transaction/receive/: command.rs  mod.rs  parse_objects.rs  parse_receive_object.rs  zlib_decode.rs
src/transaction/receive_pack/: command.rs  deltas.rs  pack_head.rs  parse_object.rs  parse_receive_object.rs  report_status.rs
src/transaction/upload/: advertise_v2.rs  command.rs  encode_pack.rs  mod.rs  recursion.rs  upload_pack.rs  upload_pack_v2.rs
src/transaction/upload_pack/: command.rs
