[package]
name = "git-in"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
sha1 = { version = "0.10", features = ["oid"] }
sha2 = { version = "0.10", features = ["oid"] }
serde = { version = "1", features = ["derive"] }
hex = { version = "0.4", features = [] }
bytes = { version = "1", features = ["serde"] }
chrono = "0.4.41"
bstr = "1.12.0"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }
async-trait = "0.1"
tokio-stream = { version = "0.1.17", features = ["full"] }
async-stream = { version = "0.3.6", features = [] }
tokio-metrics = { version = "0.4.4", features = ["tokio","metrics-rs-integration"] }
lru = { version = "0.16.0", features = [] }
byteorder = { version = "1.5.0", features = [] }
console-subscriber = { version = "0.4.1", features = ["grpc-web"] }
flate2 = "1.1.2"
actix-web = { version = "4.11.0", features = [] }
actix-web-httpauth = { version = "0.8.2", features = [] }
russh = { version = "0.54.3",default-features = false, features = [
    "flate2",
    "ring",
    "legacy-ed25519-pkcs8-parser",
    "des",
    "dsa",
    "rsa",
] }
dotenv = { version = "0.15.0", features = [] }
tracing = { version = "0.1.41", features = [] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mongodb = { version = "3", features = [] }
object_store = { version = "0.12.3", features = ["cloud"] }
futures-util = "0.3.31"
serde_json = { version = "1.0.143", features = [] }
log = { version = "0.4.27", features = [] }
lazy_static = { version = "1", features = [] }
toml = { version = "0.9", features = [] }